insert justin bieber pic

--- a/fanpage.html
+++ b/fanpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Justin Bieber • Fan Page (Prototype)</title>
+  <title>Justin Bieber • Fan Page (Prototype) by chatgptz</title>
   <meta name="description" content="Rapid prototype fan page for Justin Bieber built with vanilla HTML, CSS, and JavaScript." />
   <style>
     :root {
@@ -216,7 +216,9 @@
           <div class="stat"><div class="n" data-count="15">0</div><div class="t">Albums/EPs</div></div>
         </div>
       </div>
-      <div class="cover" role="img" aria-label="Justin Bieber portrait"></div>
+      <!-- <div class="cover" role="img" aria-label="Justin Bieber portrait"></div> -->
+      <img src="justin1.jpg" alt="Justin Bieber" class="gallery-img">
+
     </section>
 
     <!-- Music / Discography -->
