--- a/fanpage_draft1.html
+++ b/fanpage_draft1.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Justin Bieber • Fan Page (Prototype) by chatgptz</title>
-  <meta name="description" content="Rapid prototype fan page for Justin Bieber built with vanilla HTML, CSS, and JavaScript." />
+  <meta name="description" content="thingyyyy" />
   <style>
     :root {
       --bg: #0b0b10;
@@ -579,3 +579,4 @@ pics.forEach(src => {
   </script>
 </body>
 </html>
+
